@startuml classes

abstract class Usuario {
  - nome: str
  - email: str
  - telefone: str
  - senha: str
  - cpf: str
}


class Paciente {
  - data_nascimento: date
  - numero_USP: str
 
}

class Psicologo {
  - registro_profissional: str
  - abordagem: str
  + horarios_disponiveis(): 

}

class Horario {
  - psicologo: Psicologo
  - data: Data
  - hora_inicio: Hora
  - hora_fim: Hora
  - disponivel: bool
  - paciente: Paciente
  + marcar_consulta(Paciente) : void
  
}

enum Hora {
    08h00
    09h00
    10h00
    11h00
    12h00
    13h00
    14h00
    15h00
    16h00
    17h00
    18h00
    19h00
}


class Administrador {
  - cargo: str
}

Usuario <|-- Paciente
Usuario <|-- Psicologo
Usuario <|-- Administrador
Paciente --> "0..*" Horario : possui
Psicologo --> "0..*" Horario : possui

@enduml
